src/main/java/org/alex/example/fitnessmanagement/error/BusinessFitnessException.java
package org.alex.example.fitnessmanagement.error;

public class BusinessFitnessException extends RuntimeException {
    public BusinessFitnessException(String message) {
        super(message);
    }
}
